--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-map/new-orleans_louisiana.osm.json
-map/new-orleans_louisiana.osm.bz2
+convert_to_json.pyc
+audit_street_names.pyc
+audit_zipcodes.pyc
+connect_to_db.pyc
+users.pyc
+get_file_sizes.pyc
+import_file.pyc
+tags.pyc
+top_amenities.pyc
+top_contributors.pyc
+top_cuisine.pyc
+top_fast_food.pyc
+top_gas_stations.pyc
+top_religion.pyc
+ways_and_nodes.pyc
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
+map/.DS_Store
 map/new-orleans_louisiana.osm
-*.pyc
+map/new-orleans_louisiana.osm.json
+map/sample.osm.json
+problem_chars.pyc
+map/.DS_Store
+map/.DS_Store
